# college

./: .gitignore
111_1st_grade/exam111-1_計程/: test2.c
111_1st_grade/exam111-2_計程/: test3.c
111_1st_grade/hw111-1_計程/: bitop.c  bmi.c  bstreecall.c  dictionary.c  ex08.c  ex11.c  ex12.c  gomoku.c  in  out  rectangle.c
111_1st_grade/hw111-2_計程/: ex01.c  ex02.c  hw06.c  hw08.c
112_2nd_grade/hw112-2_algorithm/: hw01.c  hw03_matric.c  hw04_list.c
1st_grade/exam_programming-1/: test3.c
1st_grade/exam_programming-2/: in
1st_grade/hw_programming-1/: citizenid.c  coins.c  ex10.c  kk.c  tower.c
1st_grade/hw_programming-2/: ex01.cpp  hw01.c  hw02.c  hw03.c  hw04.c  hw04.h  hw07_wrong_but_the_ans_version.c  hw10.c  in  try.cpp
2nd_grade/hw_algorithm-2/: in  save.c
2nd_grade/hw_oop-1/: ex01.cpp  ex02.cpp  ex03.cpp  ex07.cpp  ex09.cpp  ex12.cpp
3rd_grade/hw_computer_graphics-2/hw4/: CMakeLists.txt  README.md  hw-rast.cpp  swgl-rast.cpp  swgl.cpp  swgl.h
3rd_grade/hw_regression_analysis-2/: README.md
exam111-1_計程/: test1.c  test4.c  test6.c
exam111-2_計程/: core  out  test1.c  test4.c  test5.c  test6.c
hw111-1_計程/: ex09.c  mario.c  sort.c  time.c  vector.c
hw111-2_計程/: ex03.c  ex04.c  ex05.c  ex06.c  hw01.cpp  hw02.cpp  hw05.c  hw07.c  hw09.c  hw09.cpp  out  test.c
hw112-1_data_structure/hw1/: chart_generator.py  data  support.cpp  support2.cpp
hw112-1_oop/: ex04.cpp  ex05.cpp  ex06.cpp  ex08.cpp  ex10.cpp  ex11.cpp  in
pre_set_ups/: bashrc  my_git_config  my_vimrc  plug_in_SetUp_instruction.txt  profile_benny_ver  profile_s11140_ver  tmux.config  vimrc
(+318 files in other folders)
